test/error/ast/CallParamsNotEnough.mod
MODULE CallParamsNotEnough;
PROCEDURE P(x, y: INTEGER); END P;
BEGIN
  P(1);
END CallParamsNotEnough.
